--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -2,8 +2,8 @@
 <openerp>
     <data>
 
-        <record model="ir.ui.view" id="invoice_form_fel_infile">
-            <field name="name">account.invoice.form.fel_infile</field>
+        <record model="ir.ui.view" id="invoice_form_fel_gt">
+            <field name="name">account.invoice.form.fel_gt</field>
             <field name="model">account.invoice</field>
             <field name="inherit_id" ref="l10n_gt_extra.l10n_gt_view_invoice_form"/>
             <field name="arch" type="xml">
@@ -34,8 +34,8 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="journal_form_fel_infile">
-            <field name="name">account.journal.form.fel_infile</field>
+        <record model="ir.ui.view" id="journal_form_fel_gt">
+            <field name="name">account.journal.form.fel_gt</field>
             <field name="model">account.journal</field>
             <field name="inherit_id" ref="account.view_account_journal_form"/>
             <field name="arch" type="xml">
@@ -48,8 +48,8 @@
             </field>
         </record>
 
-        <record id="view_company_form_fel_infile" model="ir.ui.view">
-            <field name="name">res.company.form.fel_infile</field>
+        <record id="view_company_form_fel_gt" model="ir.ui.view">
+            <field name="name">res.company.form.fel_gt</field>
             <field name="model">res.company</field>
             <field name="inherit_id" ref="base.view_company_form"/>
             <field name="arch" type="xml">
