--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -3,12 +3,12 @@
     <data>
 
         <record model="ir.ui.view" id="invoice_form_fel_gt">
-            <field name="name">account.invoice.form.fel_gt</field>
-            <field name="model">account.invoice</field>
-            <field name="inherit_id" ref="l10n_gt_extra.l10n_gt_view_invoice_form"/>
+            <field name="name">account.move.form.fel_gt</field>
+            <field name="model">account.move</field>
+            <field name="inherit_id" ref="l10n_gt_extra.l10n_gt_view_move_form"/>
             <field name="arch" type="xml">
                 <data>
-                    <field name="comment" position="before">
+                    <field name="narration" position="before">
                         <group>
                             <group>
                                 <field name="firma_fel"/>
@@ -40,8 +40,7 @@
             <field name="inherit_id" ref="account.view_account_journal_form"/>
             <field name="arch" type="xml">
                 <data>
-                    <field name="group_invoice_lines" position="after">
-                        <field name="codigo_establecimiento_fel"/>
+                    <field name="currency_id" position="after">
                         <field name="tipo_documento_fel"/>
                     </field>
                 </data>
