--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -34,6 +34,32 @@
             </field>
         </record>
 
+        <record model="ir.ui.view" id="invoice_supplier_form_fel_gt">
+            <field name="name">account.invoice.supplier.form.fel_gt</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="l10n_gt_extra.l10n_gt_view_invoice_supplier_form"/>
+            <field name="arch" type="xml">
+                <data>
+                    <field name="comment" position="before">
+                        <group>
+                            <group>
+                                <field name="firma_fel"/>
+                                <field name="serie_fel"/>
+                                <field name="numero_fel"/>
+                                <field name="factura_original_id"/>
+                            </group>
+                            <group>
+                                <field name="documento_xml_fel_name" invisible="1"/>
+                                <field name="documento_xml_fel" readonly="1" filename="documento_xml_fel_name"/>
+                                <field name="resultado_xml_fel_name" invisible="1"/>
+                                <field name="resultado_xml_fel" readonly="1" filename="resultado_xml_fel_name"/>
+                            </group>
+                        </group>
+                    </field>
+                </data>
+            </field>
+        </record>
+
         <record model="ir.ui.view" id="journal_form_fel_gt">
             <field name="name">account.journal.form.fel_gt</field>
             <field name="model">account.journal</field>
