No hacer raise de error de FEL si no se desea

--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -41,7 +41,9 @@
             <field name="arch" type="xml">
                 <data>
                     <field name="currency_id" position="after">
+                        <field name="generar_fel"/>
                         <field name="tipo_documento_fel"/>
+                        <field name="error_en_historial_fel"/>
                     </field>
                 </data>
             </field>
