--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -25,6 +25,7 @@
                         </group>
                     </field>
                     <field name="tipo_gasto" position="after">
+                        <field name="frase_exento_fel"/>
                         <field name="consignatario_fel" attrs="{'invisible': [('tipo_gasto','!=','importacion')]}"/>
                         <field name="comprador_fel" attrs="{'invisible': [('tipo_gasto','!=','importacion')]}"/>
                         <field name="exportador_fel" attrs="{'invisible': [('tipo_gasto','!=','importacion')]}"/>
