--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -5,11 +5,19 @@
         <template id="fel_report_invoice_document" inherit_id="account.report_invoice_document">
             
             <xpath expr="//div[@id='total']" position="after">
-                <p>
-                    Número de Autorización: <span t-field="o.firma_fel"/>
-                    <br/>Serie Fel: <span t-field="o.serie_fel"/>
-                    <br/>Número Fel: <span t-field="o.numero_fel"/>
-                    <br/>Certificador: <span t-field="o.certificador_fel"/>
+                <p class="col-xs-1 text-center">
+                    DOCUMENTO TRIBUTARIO ELECTRÓNICO
+                    <br/>FACTURA
+                    <br/>Serie Fel: <span t-field="o.serie_fel"/>.   Número Fel: <span t-field="o.numero_fel"/>
+                    <br/>Número de Autorización: <span t-field="o.firma_fel"/>
+                    <br/>Fecha de Emisión: <t t-esc="o.date_invoice"/>
+                    <br/><br/>Sujeto a pagos trimestrales ISR
+                    <br/>Agente de Retención del IVA
+                    <br/><br/>Certificador: <span t-field="o.certificador_fel"/>
+                    <t t-if="not o.certificador_fel">
+                        GUATEFACTURAS SOCIEDAD ANONIMA<br/>
+                        NIT: 5640773-4<br/>
+                    </t>    
                 </p>
             </xpath>
         </template>
