--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -72,6 +72,7 @@
                         <field name="codigo_establecimiento_fel"/>
                         <field name="tipo_documento_fel"/>
                         <field name="error_en_historial_fel"/>
+                        <field name="contingencia_fel"/>
                     </field>
                 </data>
             </field>
