--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-
+        
         <record model="ir.ui.view" id="invoice_form_fel_gt">
             <field name="name">account.move.form.fel_gt</field>
             <field name="model">account.move</field>
@@ -35,23 +35,27 @@
                 </data>
             </field>
         </record>
-
+        
         <record model="ir.ui.view" id="journal_form_fel_gt">
             <field name="name">account.journal.form.fel_gt</field>
             <field name="model">account.journal</field>
             <field name="inherit_id" ref="account.view_account_journal_form"/>
             <field name="arch" type="xml">
                 <data>
-                    <field name="currency_id" position="after">
-                        <field name="generar_fel"/>
-                        <field name="tipo_documento_fel"/>
-                        <field name="error_en_historial_fel"/>
-                        <field name="contingencia_fel"/>
-                    </field>
+                    <notebook position="inside">
+                        <page name="fel" string="FEL" attrs="{'invisible': [('type', 'not in', ['sale','purchase'])]}">
+                            <group string="FEL">
+                                <field name="generar_fel"/>
+                                <field name="tipo_documento_fel"/>
+                                <field name="error_en_historial_fel"/>
+                                <field name="contingencia_fel"/>
+                            </group>
+                        </page>
+                    </notebook>
                 </data>
             </field>
         </record>
-
+        
         <record id="view_company_form_fel_gt" model="ir.ui.view">
             <field name="name">res.company.form.fel_gt</field>
             <field name="model">res.company</field>
@@ -72,6 +76,6 @@
                 </data>
             </field>
         </record>
-
+        
     </data>
 </openerp>
