Cambios en datos de Factura Desscasa (#10)
* Factura Fel

* Cambios en factura

* Factura Fel

* Factura Desscasa

* Cambios en Factura Desscasa

* Cambios en datos de Factura Desscasa

* Cambios en datos de Factura Desscasa

--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -5,9 +5,9 @@
         <template id="inherit_external_layout_header" inherit_id="web.external_layout_standard">
             <xpath expr="//div[@class='header']/div[3]/div" position="inside">
                 <div>
-                    <ul class="list-inline mb4" style="font-size: 90%;">
-                        <li t-if="company.phone" class="list-inline-item">Phone: <span t-field="company.phone"/></li>
-                        <li t-if="company.vat" class="list-inline-item"> NIT: <span t-esc="company.vat.replace(' ','\N{NO-BREAK SPACE}')"/></li>
+                    <ul class="list-inline mb4" style="font-size: 95%;">
+                        <li t-if="company.phone">Phone: <span t-field="company.phone"/></li>
+                        <li t-if="company.vat"> NIT: <span t-esc="company.vat.replace(' ','\N{NO-BREAK SPACE}')"/></li>
                     </ul>
                 </div>
             </xpath>
@@ -18,14 +18,16 @@
 
         <template id="fel_report_invoice_document" inherit_id="account.report_invoice_document">
 
-            <xpath expr="/t/t/t/address" position="replace">
+            <xpath expr="//t/t[2]/address" position="replace">
                 <br/>
                 <address style="font-size: 90%;" t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address", "name","phone"], "no_marker": True}' />
             </xpath>
             
-            <xpath expr="/t/t/t/div" position="replace">
+            <xpath expr="//t/t[2]/div" position="replace">
                 <div t-if="o.partner_id.vat" class="mt16" style="font-size: 95%;">NIT: <span t-field="o.partner_id.vat"/></div>
-                <div t-if="o.journal_id.tipo_documento_fel in [5,'FESP'] and not o.partner_id.vat and o.partner_id.cui" class="mt16" style="font-size: 95%;">CUI: <span t-field="o.partner_id.cui"/></div>
+                <t t-if="o.journal_id.tipo_documento_fel in [5,'FESP']">
+                    <div t-if="not o.partner_id.vat or o.partner_id.vat == 'CF' and o.partner_id.cui" class="mt16" style="font-size: 95%;">CUI: <span t-field="o.partner_id.cui"/></div>
+                </t>
                 <br/>
             </xpath>
             
@@ -65,16 +67,13 @@
                 </t>
             </xpath>
             
-            <xpath expr="//div[@id='total']/div/table" position="inside">
-                <tr class="border-black o_total">
-                    <td colspan="2" class="text-center" style="font-size: 85%;">
-                        <span t-esc="o.num_a_letras(o.amount_total)"/> quetzales
-                    </td>
-                </tr>
-            </xpath>
-            
             <xpath expr="//div[@id='total']" position="after">
+                <div style="font-size: 95%;">
+                   <b>Total en letras: <span t-esc="o.num_a_letras(o.amount_total)"/> Quetzales </b>
+                </div>
+                
                 <p class="col-xs-1 text-center" style="font-size: 80%;">
+                    <br/>
                     DOCUMENTO TRIBUTARIO ELECTRÓNICO
                     <br/>
                     <t t-if="o.journal_id.tipo_documento_fel in [1,'FACT']">
