--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -18,15 +18,13 @@
 
         <template id="fel_report_invoice_document" inherit_id="account.report_invoice_document">
 
-            <xpath expr="//t/t[2]/address" position="replace">
+            <xpath expr="//t[@t-set='address']" position="replace">
                 <br/>
-                <address style="font-size: 90%;" t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address", "name","phone"], "no_marker": True}' />
-            </xpath>
-            
-            <xpath expr="//t/t[2]/div" position="replace">
-                <div t-if="o.partner_id.vat" class="mt16" style="font-size: 95%;">NIT: <span t-field="o.partner_id.vat"/></div>
+                <address style="font-size: 90%;padding-left: 550px" t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address", "name","phone"], "no_marker": True}' />
+                <div t-if="o.partner_id.vat" class="mt16" style="font-size: 95%;padding-left: 550px">NIT: <span t-field="o.partner_id.vat"/></div>
                 <t t-if="o.journal_id.tipo_documento_fel in [5,'FESP']">
-                    <div t-if="not o.partner_id.vat or o.partner_id.vat == 'CF' and o.partner_id.cui" class="mt16" style="font-size: 95%;">CUI: <span t-field="o.partner_id.cui"/></div>
+                    <div t-if="not o.partner_id.vat or o.partner_id.vat == 'CF' and o.partner_id.cui" class="mt16" style="font-size: 95%;padding-left: 550px">CUI: <span t-field="o.partner_id.cui"/></div>
+
                 </t>
                 <br/>
             </xpath>
