--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -6,7 +6,7 @@
             <xpath expr="//div[@class='header']/div[3]/div" position="inside">
                 <div>
                     <ul class="list-inline mb4" style="font-size: 95%;">
-                        <li t-if="company.phone">Phone: <span t-field="company.phone"/></li>
+                        <li t-if="company.phone">Teléfono: <span t-field="company.phone"/></li>
                         <li t-if="company.vat"> NIT: <span t-esc="company.vat.replace(' ','\N{NO-BREAK SPACE}')"/></li>
                     </ul>
                 </div>
@@ -20,10 +20,10 @@
  
              <xpath expr="//t[@t-set='address']" position="replace">
                 <br/>
-                <address style="font-size: 90%;padding-left: 550px" t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address", "name","phone"], "no_marker": True}' />
-                <div t-if="o.partner_id.vat" class="mt16" style="font-size: 95%;padding-left: 550px">NIT: <span t-field="o.partner_id.vat"/></div>
+                <address style="font-size: 90%" t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address", "name","phone"], "no_marker": True}' />
+                <div t-if="o.partner_id.vat" class="mt16" style="font-size: 95%">NIT: <span t-field="o.partner_id.vat"/></div>
                 <t t-if="o.journal_id.tipo_documento_fel in [5,'FESP']">
-                    <div t-if="not o.partner_id.vat or o.partner_id.vat == 'CF' and o.partner_id.cui" class="mt16" style="font-size: 95%;padding-left: 550px">CUI: <span t-field="o.partner_id.cui"/></div>
+                    <div t-if="not o.partner_id.vat or o.partner_id.vat == 'CF' and o.partner_id.cui" class="mt16" style="font-size: 95%">CUI: <span t-field="o.partner_id.cui"/></div>
 
                 </t>
                 <br/>
@@ -107,8 +107,7 @@
                     <br/>Serie Fel: <span t-field="o.serie_fel"/>.   Número Fel: <span t-field="o.numero_fel"/>
                     <br/>Número de Autorización: <span t-field="o.firma_fel"/>
                     <br/>Fecha de Emisión: <t t-esc="o.date_invoice"/>
-                    <br/><br/>Sujeto a pagos trimestrales ISR
-                    <br/>Agente de Retención del IVA
+                    <br/>Sujeto a pagos trimestrales ISR
                     <br/><br/>Certificador: <span t-field="o.certificador_fel"/>
                     <t t-if="not o.certificador_fel">
                         GUATEFACTURAS SOCIEDAD ANONIMA<br/>
@@ -118,7 +117,6 @@
             </xpath>
             
             <xpath expr="//div[@class='page']/p[@t-if='o.reference']" position="replace">
-                <br/>Referencia para realizar su pago: <b><span t-field="o.reference"/></b>
             </xpath>
             
         </template>
