--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -17,7 +17,9 @@
         </template>
 
         <template id="fel_report_invoice_document" inherit_id="account.report_invoice_document">
- 
+            
+            <xpath expr="//h2" position="replace">
+            </xpath>
              <xpath expr="//t[@t-set='address']" position="replace">
                 <br/>
                 <address style="font-size: 90%" t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address", "name","phone"], "no_marker": True}' />
@@ -26,7 +28,6 @@
                     <div t-if="not o.partner_id.vat or o.partner_id.vat == 'CF' and o.partner_id.cui" class="mt16" style="font-size: 95%">CUI: <span t-field="o.partner_id.cui"/></div>
 
                 </t>
-                <br/>
             </xpath>
             
             <xpath t-if="o.journal_id.tipo_documento_fel in [5,'FESP']" expr="//div[@id='total']/div/table/t" position="replace">
