--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -86,40 +86,9 @@
             <xpath expr="//div[@name='description']" position="replace">
             </xpath>
             
+            <xpath t-if="o.journal_id.tipo_documento_fel in [5,'FESP']" expr="//div[@id='total']/div/table/tr" position="replace">
+            </xpath>
             <xpath t-if="o.journal_id.tipo_documento_fel in [5,'FESP']" expr="//div[@id='total']/div/table/t" position="replace">
-                <t t-if="o.journal_id.tipo_documento_fel in [5,'FESP']">
-                    <t t-foreach="o.tax_line_ids" t-as="tax">
-                        <tr style="font-size: 80%;">
-                            <td><span t-esc="tax.name"/></td>
-                            <td class="text-right o_price_total">
-                                <span t-esc="tax.amount" />
-                            </td>
-                        </tr>
-                    </t>
-                </t>
-                <t t-if="not o.journal_id.tipo_documento_fel in [5,'FESP']">
-                    <t t-foreach="o.amount_by_group" t-as="amount_by_group">
-                        <tr style="font-size: 80%;">
-                            <t t-if="len(o.tax_line_ids) == 1 and o.amount_untaxed == amount_by_group[2]">
-                                <td><span t-esc="amount_by_group[0]"/></td>
-                                <td class="text-right o_price_total">
-                                    <span t-esc="amount_by_group[3]" />
-                                </td>
-                            </t>
-                            <t t-else="">
-                                <td>
-                                    <span t-esc="amount_by_group[0]"/>
-                                    <span>&amp;nbsp;<span>en</span>
-                                        <t t-esc="amount_by_group[4]"/>
-                                    </span>
-                                </td>
-                                <td class="text-right o_price_total">
-                                    <span t-esc="amount_by_group[3]"/>
-                                </td>
-                            </t>
-                        </tr>
-                    </t>
-                </t>
             </xpath>
             
             <xpath expr="//div[@id='total']" position="after">
